--- a/src/_inc/sidebar-with-footer.htm
+++ b/src/_inc/sidebar-with-footer.htm
@@ -12,7 +12,7 @@
                       <path class="logo-fill-white" fill="#FFF" d="M11 4v25l8 4V0z"/>
                     </g>
                   </svg>
-                  <span class="logo-title">Sleek Dashboard</span>
+                  <span class="logo-title">Custom Dashboard</span>
                 </a>
               </div>
               <!-- begin sidebar scrollbar -->
@@ -314,6 +314,11 @@
                               </li>
                             </div>
                           </ul>
+                        </li>
+
+                        <!-- custom by basem //custom pages -->
+                        <li class="@@if (active === 'profile'){active}">
+                          <a href="page-fix.html">Page has fixed content</a>
                         </li>
                       </div>
                     </ul>
