--- a/src/_inc/sidebar.htm
+++ b/src/_inc/sidebar.htm
@@ -13,7 +13,7 @@
                       <path class="logo-fill-white" fill="#FFF" d="M11 4v25l8 4V0z" />
                     </g>
                   </svg>
-                  <span class="logo-title">Sleek Dashboard</span>
+                  <span class="logo-title">Custom Dashboard</span>
                 </a>
               </div>
               <!-- begin sidebar scrollbar -->
