basem customize init

--- a/src/_inc/sidebar-with-footer.htm
+++ b/src/_inc/sidebar-with-footer.htm
@@ -317,7 +317,7 @@
                         </li>
 
                         <!-- custom by basem //custom pages -->
-                        <li class="@@if (active === 'profile'){active}">
+                        <li class="@@if (active === 'page-fix'){active}">
                           <a href="page-fix.html">Page has fixed content</a>
                         </li>
                       </div>
