--- a/src/page-fix.html
+++ b/src/page-fix.html
@@ -4,7 +4,7 @@
 		<!-- ====================================
 		——— PAGE WRAPPER
 		===================================== -->
-		<div class="custom-page-wrapper page-wrapper">
+		<div class=" page-wrapper">
 			@@include('top-bar.htm')
 				<div class="content-wrapper">
 					
