--- a/src/page-fix.html
+++ b/src/page-fix.html
@@ -19,142 +19,7 @@
             <div class="col-xl-4">
               <div class="card text-center ">
                 <a href="#">
-                  <h5 class="card-header bg-danger text-white">Featured</h5>
-                  <div class="card-body ">
-
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                  </div>
-                  <div class="card-footer bg-danger text-white d-flex justify-content-between align-items-center">
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col-xl-4">
-              <div class="card text-center">
-                <a href="#">
-                  <h5 class="card-header">Featured</h5>
-                  <div class="card-body ">
-
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                  </div>
-                  <div class="card-footer text-muted d-flex justify-content-between align-items-center">
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col-xl-4">
-              <div class="card text-center">
-                <a href="#">
-                  <h5 class="card-header">Featured</h5>
-                  <div class="card-body ">
-
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                  </div>
-                  <div class="card-footer text-muted d-flex justify-content-between align-items-center">
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col-xl-4">
-              <div class="card text-center">
-                <a href="#">
-                  <h5 class="card-header">Featured</h5>
-                  <div class="card-body ">
-
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                  </div>
-                  <div class="card-footer text-muted d-flex justify-content-between align-items-center">
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col-xl-4">
-              <div class="card text-center">
-                <a href="#">
-                  <h5 class="card-header">Featured</h5>
-                  <div class="card-body ">
-
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                  </div>
-                  <div class="card-footer bg-info text-white d-flex justify-content-between align-items-center">
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col-xl-4">
-              <div class="card text-center">
-                <a href="#">
-                  <h5 class="card-header">Featured</h5>
+                  <h5 class="card-header bg-dark text-white">Featured</h5>
                   <div class="card-body ">
 
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -178,6 +43,140 @@
               </div>
             </div>
 
+            <div class="col-xl-4">
+              <div class="card text-center ">
+                <a href="#">
+                  <h5 class="card-header bg-dark text-white">Featured</h5>
+                  <div class="card-body ">
+
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+                  </div>
+                  <div class="card-footer bg-dark text-white d-flex justify-content-between align-items-center">
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+            <div class="col-xl-4">
+              <div class="card text-center ">
+                <a href="#">
+                  <h5 class="card-header bg-dark text-white">Featured</h5>
+                  <div class="card-body ">
+
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+                  </div>
+                  <div class="card-footer bg-dark text-white d-flex justify-content-between align-items-center">
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+            <div class="col-xl-4">
+              <div class="card text-center ">
+                <a href="#">
+                  <h5 class="card-header bg-dark text-white">Featured</h5>
+                  <div class="card-body ">
+
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+                  </div>
+                  <div class="card-footer bg-dark text-white d-flex justify-content-between align-items-center">
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+            <div class="col-xl-4">
+              <div class="card text-center ">
+                <a href="#">
+                  <h5 class="card-header bg-dark text-white">Featured</h5>
+                  <div class="card-body ">
+
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+                  </div>
+                  <div class="card-footer bg-dark text-white d-flex justify-content-between align-items-center">
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+            <div class="col-xl-4">
+              <div class="card text-center ">
+                <a href="#">
+                  <h5 class="card-header bg-dark text-white">Featured</h5>
+                  <div class="card-body ">
+
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+                  </div>
+                  <div class="card-footer bg-dark text-white d-flex justify-content-between align-items-center">
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
 
 
 
