--- a/src/_inc/sidebar.htm
+++ b/src/_inc/sidebar.htm
@@ -144,6 +144,9 @@
                               <li class="@@if (active === 'breadcrumb'){active}">
                                 <a href="bredcrumb.html">Breadcrumb</a>
                               </li>
+                              <li class="@@if (active === 'custom-card'){active}">
+                                <a href="custom-card.html">Custom Cards</a>
+                              </li>
                               <li class="@@if (active === 'card'){active}">
                                 <a href="card.html">Cards</a>
                               </li>
