--- a/src/page-fix.html
+++ b/src/page-fix.html
@@ -19,13 +19,121 @@
             <div class="col-xl-4">
               <div class="card text-center ">
                 <a href="#">
-                  <h5 class="card-header bg-dark text-white">Featured</h5>
+                  <h5 class="card-header bg-danger text-white">Featured</h5>
                   <div class="card-body ">
 
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
 
                   </div>
-                  <div class="card-footer bg-dark text-white d-flex justify-content-between align-items-center">
+                  <div class="card-footer bg-danger text-white d-flex justify-content-between align-items-center">
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+            <div class="col-xl-4">
+              <div class="card text-center ">
+                <a href="#">
+                  <h5 class="card-header bg-warning text-white">Featured</h5>
+                  <div class="card-body ">
+
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+                  </div>
+                  <div class="card-footer bg-warning text-white d-flex justify-content-between align-items-center">
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+            <div class="col-xl-4">
+              <div class="card text-center ">
+                <a href="#">
+                  <h5 class="card-header bg-success text-white">Featured</h5>
+                  <div class="card-body ">
+
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+                  </div>
+                  <div class="card-footer bg-success text-white d-flex justify-content-between align-items-center">
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+            <div class="col-xl-4">
+              <div class="card text-center ">
+                <a href="#">
+                  <h5 class="card-header gray-dark text-white">Featured</h5>
+                  <div class="card-body ">
+
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+                  </div>
+                  <div class="card-footer gray-dark text-white d-flex justify-content-between align-items-center">
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                    <div class="flex-fill">
+                      <p>text</p>
+                      <p>211585</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+
+            <div class="col-xl-4">
+              <div class="card text-center ">
+                <a href="#">
+                  <h5 class="card-header bg-primary text-white">Featured</h5>
+                  <div class="card-body ">
+
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+
+                  </div>
+                  <div class="card-footer bg-secondary text-white d-flex justify-content-between align-items-center">
                     <div class="flex-fill">
                       <p>text</p>
                       <p>211585</p>
@@ -52,7 +160,7 @@
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
 
                   </div>
-                  <div class="card-footer bg-dark text-white d-flex justify-content-between align-items-center">
+                  <div class="card-footer bg-info text-white d-flex justify-content-between align-items-center">
                     <div class="flex-fill">
                       <p>text</p>
                       <p>211585</p>
@@ -69,123 +177,6 @@
                 </a>
               </div>
             </div>
-
-            <div class="col-xl-4">
-              <div class="card text-center ">
-                <a href="#">
-                  <h5 class="card-header bg-dark text-white">Featured</h5>
-                  <div class="card-body ">
-
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                  </div>
-                  <div class="card-footer bg-dark text-white d-flex justify-content-between align-items-center">
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col-xl-4">
-              <div class="card text-center ">
-                <a href="#">
-                  <h5 class="card-header bg-dark text-white">Featured</h5>
-                  <div class="card-body ">
-
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                  </div>
-                  <div class="card-footer bg-dark text-white d-flex justify-content-between align-items-center">
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col-xl-4">
-              <div class="card text-center ">
-                <a href="#">
-                  <h5 class="card-header bg-dark text-white">Featured</h5>
-                  <div class="card-body ">
-
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                  </div>
-                  <div class="card-footer bg-dark text-white d-flex justify-content-between align-items-center">
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="col-xl-4">
-              <div class="card text-center ">
-                <a href="#">
-                  <h5 class="card-header bg-dark text-white">Featured</h5>
-                  <div class="card-body ">
-
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-
-                  </div>
-                  <div class="card-footer bg-dark text-white d-flex justify-content-between align-items-center">
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                    <div class="flex-fill">
-                      <p>text</p>
-                      <p>211585</p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-
-
-
-
-
-
-
-
 
 
 
@@ -200,6 +191,78 @@
 
       </div>
       <div class="page-content scrollable">
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
+          electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
+          Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
           industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
