--- a/src/custom-card.html
+++ b/src/custom-card.html
@@ -29,13 +29,13 @@
 									</div>
 									<div class="card-footer text-muted">
 										<div class="row">
-											<div class="col-lg-4">
+											<div class="col">
 												<span class="badge badge-secondary">Secondary</span>
 											</div>
-											<div class="col-lg-4">
+											<div class="col">
 <span class="badge badge-success">Success</span>
 											</div>
-											<div class="col-lg-4">
+											<div class="col">
 <span class="badge badge-danger">Danger</span>
 											</div>
 										</div>
@@ -62,13 +62,13 @@
 										</div>
 										<div class="card-footer text-muted">
 											<div class="row">
-												<div class="col-lg-4">
+												<div class="col">
 													<span class="badge badge-secondary">Secondary</span>
 												</div>
-												<div class="col-lg-4">
+												<div class="col">
 	<span class="badge badge-success">Success</span>
 												</div>
-												<div class="col-lg-4">
+												<div class="col">
 	<span class="badge badge-danger">Danger</span>
 												</div>
 											</div>
@@ -95,13 +95,13 @@
 											</div>
 											<div class="card-footer text-muted">
 												<div class="row">
-													<div class="col-lg-4">
+													<div class="col">
 														<span class="badge badge-secondary">Secondary</span>
 													</div>
-													<div class="col-lg-4">
+													<div class="col">
 		<span class="badge badge-success">Success</span>
 													</div>
-													<div class="col-lg-4">
+													<div class="col">
 		<span class="badge badge-danger">Danger</span>
 													</div>
 												</div>
@@ -128,13 +128,13 @@
 												</div>
 												<div class="card-footer text-muted">
 													<div class="row">
-														<div class="col-lg-4">
+														<div class="col">
 															<span class="badge badge-secondary">Secondary</span>
 														</div>
-														<div class="col-lg-4">
+														<div class="col">
 			<span class="badge badge-success">Success</span>
 														</div>
-														<div class="col-lg-4">
+														<div class="col">
 			<span class="badge badge-danger">Danger</span>
 														</div>
 													</div>
@@ -160,13 +160,13 @@
 													</div>
 													<div class="card-footer text-muted">
 														<div class="row">
-															<div class="col-lg-4">
+															<div class="col">
 																<span class="badge badge-secondary">Secondary</span>
 															</div>
-															<div class="col-lg-4">
+															<div class="col">
 				<span class="badge badge-success">Success</span>
 															</div>
-															<div class="col-lg-4">
+															<div class="col">
 				<span class="badge badge-danger">Danger</span>
 															</div>
 														</div>
@@ -192,13 +192,13 @@
 														</div>
 														<div class="card-footer text-muted">
 															<div class="row">
-																<div class="col-lg-4">
+																<div class="col">
 																	<span class="badge badge-secondary">Secondary</span>
 																</div>
-																<div class="col-lg-4">
+																<div class="col">
 					<span class="badge badge-success">Success</span>
 																</div>
-																<div class="col-lg-4">
+																<div class="col">
 					<span class="badge badge-danger">Danger</span>
 																</div>
 															</div>
@@ -224,13 +224,13 @@
 															</div>
 															<div class="card-footer text-muted">
 																<div class="row">
-																	<div class="col-lg-4">
+																	<div class="col">
 																		<span class="badge badge-secondary">Secondary</span>
 																	</div>
-																	<div class="col-lg-4">
+																	<div class="col">
 						<span class="badge badge-success">Success</span>
 																	</div>
-																	<div class="col-lg-4">
+																	<div class="col">
 						<span class="badge badge-danger">Danger</span>
 																	</div>
 																</div>
@@ -256,13 +256,13 @@
 																</div>
 																<div class="card-footer text-muted">
 																	<div class="row">
-																		<div class="col-lg-4">
+																		<div class="col">
 																			<span class="badge badge-secondary">Secondary</span>
 																		</div>
-																		<div class="col-lg-4">
+																		<div class="col">
 							<span class="badge badge-success">Success</span>
 																		</div>
-																		<div class="col-lg-4">
+																		<div class="col">
 							<span class="badge badge-danger">Danger</span>
 																		</div>
 																	</div>
@@ -288,13 +288,13 @@
 																	</div>
 																	<div class="card-footer text-muted">
 																		<div class="row">
-																			<div class="col-lg-4">
+																			<div class="col">
 																				<span class="badge badge-secondary">Secondary</span>
 																			</div>
-																			<div class="col-lg-4">
+																			<div class="col">
 								<span class="badge badge-success">Success</span>
 																			</div>
-																			<div class="col-lg-4">
+																			<div class="col">
 								<span class="badge badge-danger">Danger</span>
 																			</div>
 																		</div>
@@ -320,13 +320,13 @@
 																		</div>
 																		<div class="card-footer text-muted">
 																			<div class="row">
-																				<div class="col-lg-4">
+																				<div class="col">
 																					<span class="badge badge-secondary">Secondary</span>
 																				</div>
-																				<div class="col-lg-4">
+																				<div class="col">
 									<span class="badge badge-success">Success</span>
 																				</div>
-																				<div class="col-lg-4">
+																				<div class="col">
 									<span class="badge badge-danger">Danger</span>
 																				</div>
 																			</div>
