--- a/src/_inc/custom-footer.htm
+++ b/src/_inc/custom-footer.htm
@@ -3,14 +3,12 @@
               ——— FOOTER
               ===================================== -->
               <footer class="footer mt-auto">
-                <div class="copyright bg-white">
-                  <p>&copy; 2018 Copyright Custom Dashboard
+                <div class="copyright ">
+                  <p>&copy; 2018 Copyright Custom Dashboard </p>
                     
                 </div>
               </footer>
-            </div>
-          </div>
-        </div>
+        
  
 
     <!-- JAVASCRIPTS -->
