--- a/src/_inc/sidebar-with-footer.htm
+++ b/src/_inc/sidebar-with-footer.htm
@@ -323,6 +323,11 @@
                         <li class="@@if (active === 'page-fix'){active}">
                           <a href="page-fix.html">Page has fixed content</a>
                         </li>
+
+                        <!-- custom by basem //custom pages -->
+                        <li class="@@if (active === 'page-front'){active}">
+                            <a href="page-front.html">Page Front</a>
+                          </li>
                       </div>
                     </ul>
                   </li>
